remove arg for failsave-plugin